--- a/index.html
+++ b/index.html
@@ -38,6 +38,61 @@
             <a href="#" class="btn btn-branding">Contact me</a>
         </div>
     </div>
+    <p class="text-center m-5">Featured project which my best projects be choice to show</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-6 d-none d-lg-block mb-5">
+<img src="yogurt.png" class="img-fluid" alt="">
+            </div>
+            <div class="col-sm-6">
+                <div class="project-des">
+                    <h2 class="mb-5">
+                        Dictionary project
+                    </h2>
+                    <p class="mb-5 text-muted">Yoghurt er et melkeprodukt av høypasteurisert melk som er syrnet ved hjelp av melkesyrebakterien
+                        Lactobacillus
+                        bulgaricus og Streptococcustn thermophilus. Yoghurt uten tilsetninger brukes som ingrediens i en lang rekke
+                        matretter.</p>
+                    <a href="" class="btn btn-branding-outline"> Learn more </a>
+            </div>
+</div>
+
+            <div class="col-sm-6">
+                <div class="project-des">
+                    <h2 class="mb-5">
+                        Weather app
+                    </h2>
+                    <p class="mb-5 text-muted">Yoghurt er et melkeprodukt av høypasteurisert melk som er syrnet ved hjelp av
+                        melkesyrebakterien
+                        Lactobacillus
+                        bulgaricus og Streptococcustn thermophilus. Yoghurt uten tilsetninger brukes som ingrediens i en lang rekke
+                        matretter.</p>
+                    <a href="" class="btn btn-branding-outline"> Learn more </a>
+                </div>
+            </div>
+
+            <div class="col-6 d-none d-lg-block mb-5">
+                <img src="weather.png" class="img-fluid" alt="">
+            </div>
+
+                        <div class="col-6 d-none d-lg-block mb-5">
+                            <img src="dictionary.png" class="img-fluid" alt="">
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="project-des">
+                                <h2 class="mb-5">
+                                    Dictionary project
+                                </h2>
+                                <p class="mb-5 text-muted">Yoghurt er et melkeprodukt av høypasteurisert melk som er syrnet ved hjelp av
+                                    melkesyrebakterien
+                                    Lactobacillus
+                                    bulgaricus og Streptococcustn thermophilus. Yoghurt uten tilsetninger brukes som ingrediens i en lang rekke
+                                    matretter.</p>
+                                <a href="" class="btn btn-branding-outline"> Learn more </a>
+                            </div>
+                        </div>
+    </div>
+    </div>
 </body>
 
 </html>
