--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
 </head>
 
 <body>
+
+        <div class="container">
+            <nav class="d-flex justify-content-between">
+        <img src="logo.png" class="d-none d-md-block" alt="" width="200px">
+        <img src="small-logo.gif" alt="" width="50px" class="d-block d-md-none">
+        <ul>
+            <li class="active"> <a href="/">Home</a></li>
+            <li> <a href="about.html">About</a></li>
+            <li> <a href="work.html">Work</a></li>
+            <li> <a href="contact.html">Contact</a></li>
+        </ul>
+        </nav>
+        </div>
+    
     <div class="hero">
         <p> ✋ Hallo, I am </p>
         <h1>Noreen Akhtar</h1>
