--- a/index.html
+++ b/index.html
@@ -106,6 +106,31 @@
                             </div>
                         </div>
     </div>
+    <footer>
+        <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+            <div>
+            <h4>
+                Work inquiry
+            </h4>
+            <p class="text-muted">
+                Lets work togheter
+            </p>
+            </div>
+            <div>
+            <a href="" class="btn btn-branding mt-3">Contact Me</a>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+        <a href="mailto:noreen.98.na@gmail.com" class="email-link">
+            noreen.98.na@gmail.com
+        </a>
+    </div>
+        <div class="social-links d-flex justify-content-center mb-5">
+            <a href=""><img src="https://cdn-icons-png.flaticon.com/512/87/87390.png" alt="" width="15px"></a>
+        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="" width="15px"></a>    
+    <a href=""><img src="https://cdn-icons-png.flaticon.com/512/59/59439.png" alt="" width="15px"></a>    
+    </div>
+    </footer>
     </div>
 </body>
 
