--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Front-end developer Noreen</title>
 </head>
 
 <body>
@@ -109,9 +109,9 @@
     <footer>
         <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
             <div>
-            <h4>
+            <h3>
                 Work inquiry
-            </h4>
+            </h3>
             <p class="text-muted">
                 Lets work togheter
             </p>
