--- a/work.html
+++ b/work.html
@@ -30,6 +30,18 @@
 </head>
 
 <body>
+            <div class="container">
+                <nav class="d-flex justify-content-between">
+                    <img src="logo.png" class="d-none d-md-block" alt="" width="200px">
+                    <img src="small-logo.gif" alt="" width="50px" class="d-block d-md-none">
+                    <ul>
+                        <li> <a href="index.html">Home</a></li>
+                        <li> <a href="about.html">About</a></li>
+                        <li class="active"> <a href="work.html">Work</a></li>
+                        <li> <a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
     <div class="about-section container">
             <div class="content">
                     <h1 class="mb-4">Take a look at what I have worked on</h1>
